# NR

./: CMakeLists.txt  README.md  main.cpp  mnist_loader.cpp  mnist_loader.h  neural_net.cpp  neural_net.h  util.cpp  util.h  web_server.cpp  web_server.h
